trait_map_derive/tests/ui/fail/invalid_syntax.stderr
error: expected #[trait_map(...)]
 --> tests/ui/fail/invalid_syntax.rs:8:3
  |
8 | #[trait_map]
  |   ^^^^^^^^^

error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:9:22
  |
9 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                      ^^^^^^^^^

error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:9:33
  |
9 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                                 ^^^^

error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:9:39
  |
9 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                                       ^^^^^^^^^^^
